gathered funcs into class

--- a/calc_savchuk/calc_savchuk/calc_savchuk.vcxproj.filters
+++ b/calc_savchuk/calc_savchuk/calc_savchuk.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="calc_savchuk.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="calc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="calc.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
