--- a/calc_savchuk/calc_savchuk/calc_savchuk.vcxproj
+++ b/calc_savchuk/calc_savchuk/calc_savchuk.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="calc.cpp" />
     <ClCompile Include="calc_savchuk.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="calc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
